# Flicker

./: .gitignore  CLAUDE.md
DOCS/: ARCHITECTURE.md  CLI.md  PLAN.md  PROGRESS.md
cli/: Cargo.toml
cli/src/: config.rs  main.rs  model.rs  storage.rs  sync.rs  sync_state.rs
cli/src/commands/: add.rs  bash.rs  config.rs  delete.rs  list.rs  mod.rs  rename.rs  search.rs  show.rs  status.rs
cli/src/tui/: mod.rs  state.rs  ui.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  model.rs  storage.rs  sync.rs
ios-app/Flicker/: FlickerApp.swift
ios-app/Flicker.xcodeproj/: project.pbxproj
ios-app/Flicker/Models/: Flicker.swift
ios-app/Flicker/Services/: SpeechService.swift  StorageService.swift  SyncService.swift
ios-app/Flicker/Views/: FlickerDetailView.swift  FlickerListView.swift  NewFlickerView.swift  QuickRecordView.swift  SettingsView.swift
shared/: file-format.md
